intermediate commit, adding matrix constructors, added Expect helper dir

--- a/src/Matrix/CMakeLists.txt
+++ b/src/Matrix/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(matrix INTERFACE)
 target_include_directories(matrix INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(matrix INTERFACE foundation)
