--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(unit_tests TestMatrix.cpp)
-target_link_libraries(unit_tests gtest_main matrix)
+add_subdirectory(benchmark)
+add_subdirectory(unit)
