--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_subdirectory(benchmark)
-add_subdirectory(unit)
+if (${PROJECT_NAME}_BENCHMARKS)
+    add_subdirectory(benchmark)
+endif()
+
+if (${PROJECT_NAME}_TESTS)
+    add_subdirectory(unit)
+endif()
