--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_subdirectory(googletest)
-add_subdirectory(benchmark)
+add_subdirectory(argparse)
+
+if (${PROJECT_NAME}_TESTS)
+    add_subdirectory(googletest)
+endif()
+
+if (${PROJECT_NAME}_BENCHMARKS)
+    add_subdirectory(benchmark)
+endif()
