--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.29.3)
 
 project(ISP CXX)
 
+include(GoogleTest)
+enable_testing()
+
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-option(${PROJECT_NAME}_BENCHMARKS OFF)
-option(${PROJECT_NAME}_TESTS OFF)
 
 add_subdirectory(extern)
 add_subdirectory(src)
