--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -21,6 +21,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Set PLATFORM variable
+              shell: bash
               run: |
                 if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
                     echo "PLATFORM=apple" >> $GITHUB_ENV
