--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -31,6 +31,16 @@ jobs:
                     echo "PLATFORM=windows" >> $GITHUB_ENV
                 fi
 
+            - name: Install Ninja (Ubuntu)
+              if: matrix.os == 'ubuntu-latest'
+              run: |
+                sudo apt-get update
+                sudo apt-get install -y ninja-build
+
+            - name: Install Ninja (macOS)
+              if: matrix.os == 'macos-latest'
+              run: brew install ninja
+
             - name: Configure
               shell: bash
               run: |
