--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -19,6 +19,9 @@ jobs:
         steps:
             - name: Checkout source
               uses: actions/checkout@v3
+              with:
+                submodules: 'recursive'
+                fetch-depth: 1
 
             - name: Set PLATFORM variable
               shell: bash
