--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -37,8 +37,8 @@ jobs:
             - name: Install Ninja (Ubuntu)
               if: matrix.os == 'ubuntu-latest'
               run: |
-                sudo apt-get update
-                sudo apt-get install -y ninja-build
+                sudo apt update
+                sudo apt install -y ninja-build
 
             - name: Install Ninja (macOS)
               if: matrix.os == 'macos-latest'
