conditionally build the benchmarks

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -2,5 +2,7 @@ add_subdirectory(argparse)
 
 add_subdirectory(googletest)
 
-set(BENCHMARK_ENABLE_TESTING OFF)
-add_subdirectory(benchmark)
+if (${PROJECT_NAME}_ENABLE_BENCHMARKS)
+    set(BENCHMARK_ENABLE_TESTING OFF)
+    add_subdirectory(benchmark)
+endif()
