--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_subdirectory(benchmark)
+if (${PROJECT_NAME}_ENABLE_BENCHMARKS)
+    add_subdirectory(benchmark)
+endif()
+
 add_subdirectory(unit)
