matrix is not tensor except I actually renamed the library this time

--- a/tests/benchmark/CMakeLists.txt
+++ b/tests/benchmark/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(benchmarks BenchmarkMatrix.cpp)
-target_link_libraries(benchmarks benchmark_main matrix)
+target_link_libraries(benchmarks benchmark_main tensor)
