--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(unit_tests TestMatrix.cpp)
-target_link_libraries(unit_tests gtest_main matrix)
+target_link_libraries(unit_tests gtest_main tensor)
 
 gtest_discover_tests(unit_tests)
