--- a/src/Image/CMakeLists.txt
+++ b/src/Image/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(image INTERFACE)
 target_include_directories(image INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(image INTERFACE foundation tensor)
+target_link_libraries(image INTERFACE foundation tensor lodepng)
