--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -47,14 +47,14 @@ jobs:
             - name: Configure
               shell: bash
               run: |
-                cmake --preset "${{ matrix.arch }}-${PLATFORM}"
+                cmake --preset default
 
             - name: Build
               shell: bash
               run: |
-                cmake --build --preset "${{ matrix.arch }}-${PLATFORM}-${{ matrix.config }}"
+                cmake --build --preset release
 
             - name: Test
               shell: bash
               run: |
-                ctest --preset "${{ matrix.arch }}-${PLATFORM}-${{ matrix.config }}"
+                ctest --preset release
