--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -23,31 +23,10 @@ jobs:
                 submodules: 'recursive'
                 fetch-depth: 1
 
-            - name: Set PLATFORM variable
-              shell: bash
-              run: |
-                if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-                    echo "PLATFORM=macos" >> $GITHUB_ENV
-                elif [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-                    echo "PLATFORM=linux" >> $GITHUB_ENV
-                else
-                    echo "PLATFORM=windows" >> $GITHUB_ENV
-                fi
-
-            - name: Install Ninja (Ubuntu)
-              if: matrix.os == 'ubuntu-latest'
-              run: |
-                sudo apt update
-                sudo apt install -y ninja-build
-
-            - name: Install Ninja (macOS)
-              if: matrix.os == 'macos-latest'
-              run: brew install ninja
-
             - name: Configure
               shell: bash
               run: |
-                cmake --preset default
+                cmake --preset release
 
             - name: Build
               shell: bash
